# longhand

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  pyproject.toml  server.json
.claude-plugin/: README.md  plugin.json
.fieldnotes/: INDEX.md  config.toml
.fieldnotes/notes/: 0001-silent-failure-staleness-class.md  0002-project-inference-cwd-mode.md  0003-subagent-jsonl-discovery-filter.md  0004-fix-summary-no-intent-prefix.md  0005-truncate-at-clean-boundary.md  0006-project-inference-cwd-mode.md
.github/workflows/: ci.yml  publish.yml
demo/: longhand-demo.cast
docs/: devto-dogfood-post.md  distribution-submissions.md  launch-post.md
hooks/: hooks.json
longhand/: __init__.py  __main__.py  cli.py  mcp_server.py  parser.py  replay.py  setup_commands.py  types.py  version.py
longhand/analysis/: __init__.py  episode_extraction.py  outcomes.py  project_inference.py  segment_extraction.py  session_summary_embedding.py
longhand/cli/: __init__.py  _commands.py  helpers.py
longhand/extractors/: __init__.py  errors.py  file_refs.py  git.py  topics.py
longhand/recall/: __init__.py  drift_cache.py  episode_search.py  narrative.py  project_fallback.py  project_match.py  recall_pipeline.py  reconcile.py  segment_search.py  time_parser.py
longhand/storage/: __init__.py  migrations.py  sqlite_store.py  store.py  vector_store.py
scripts/: check-longhand.sh  check_version_sync.py  recall_diff.py  recall_diff_baseline.json  recall_diff_queries.json
tests/: canary_harness.py  conftest.py  test_analysis.py  test_canary_corpus.py  test_cli_commands.py  test_drift_cache.py  test_episode_pipeline.py  test_episode_search.py  test_extractors.py  test_get_latest_events.py  test_git_extractor.py  test_ingest_live.py  test_ingest_session_stdin.py  test_mcp_tools.py  test_migrations.py  test_parser.py  test_payload_hygiene.py  test_project_fallback.py  test_replay.py  test_search_in_context.py  test_segments.py  test_store.py
tests/fixtures/corpus/: README.md  __init__.py  canary_fix_summary_intent_prefix.py  canary_fix_summary_midcode_truncation.py  canary_project_inference_home_cd.py  canary_recall_secondary_match.py
